<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DigitalDiary</string>
    <string name="network_diary">Network Diary</string>
    <string name="app_diary">Apps Diary</string>
    <string name="power_consuming_diary">Power Consuming Diary</string>
    <string name="other_diaries">Other Diaries</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">NYU</string>
    <string name="action_settings">Settings</string>
    <string name="contentDescription_network">Network Diary</string>
    <string name="contentDescription_power">PowerConsuming Diary</string>
    <string name="contentDescription_runnning_apps">Running Apps</string>
    <string name="contentDescription_others">Other Diary</string>
    <string name="contentDescription_wifi">Wifi Signal</string>
    
    
    <string name="string_dashboard">Dashboard</string>
    <string name="string_help">Help</string>
    <string name="string_settings">Setting</string>

</resources>