<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/GridLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/purple"
    android:gravity="center" >

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:gravity="center"
        android:rowCount="2"
        tools:context=".GridXMLActivity" >

        <ImageButton
            android:id="@+id/imagebutton_network"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_column="0"
            android:layout_gravity="right|bottom"
            android:layout_row="0"
            android:contentDescription="@string/contentDescription_network"
            android:onClick="onButtonClicked"
            android:scaleType="fitXY"
            android:src="@drawable/network" />

        <ImageButton
            android:id="@+id/imagebutton_power"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_column="1"
            android:layout_gravity="left|bottom"
            android:layout_row="0"
            android:contentDescription="@string/contentDescription_power"
            android:onClick="onButtonClicked"
            android:scaleType="fitXY"
            android:src="@drawable/power" />

        <ImageButton
            android:id="@+id/imagebutton_running_apps"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:contentDescription="@string/contentDescription_runnning_apps"
            android:onClick="onButtonClicked"
            android:scaleType="fitXY"
            android:src="@drawable/android" />

        <ImageButton
            android:id="@+id/imagebutton_others"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:contentDescription="@string/contentDescription_others"
            android:onClick="onButtonClicked"
            android:scaleType="fitXY"
            android:src="@drawable/others" />
    </GridLayout>

</LinearLayout>