<!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.nyu.cloud.digitaldiary.MainActivity" >

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/layout_bg"
        android:gravity="center" >

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:gravity="center"
            android:rowCount="2"
            tools:context=".GridXMLActivity" >

            <ImageButton
                android:id="@+id/imagebutton_network"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_column="0"
                android:layout_gravity="right|bottom"
                android:layout_row="0"
                android:contentDescription="@string/contentDescription_network"
                android:onClick="onButtonClicked"
                android:scaleType="fitXY"
                android:src="@drawable/network" />

            <ImageButton
                android:id="@+id/imagebutton_power"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_column="1"
                android:layout_gravity="left|bottom"
                android:layout_row="0"
                android:contentDescription="@string/contentDescription_power"
                android:onClick="onButtonClicked"
                android:scaleType="fitXY"
                android:src="@drawable/power" />

            <ImageButton
                android:id="@+id/imagebutton_running_apps"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:contentDescription="@string/contentDescription_runnning_apps"
                android:onClick="onButtonClicked"
                android:scaleType="fitXY"
                android:src="@drawable/android" />

            <ImageButton
                android:id="@+id/imagebutton_wifi"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:contentDescription="@string/contentDescription_wifi"
                android:onClick="onButtonClicked"
                android:scaleType="fitXY"
                android:src="@drawable/wifi" />
        </GridLayout>
    </RelativeLayout>

    <fragment
        android:id="@+id/navigation_drawer"
        android:name="edu.nyu.cloud.digitaldiary.NavigationDrawerFragment"
        android:layout_width="@dimen/navigation_drawer_width"
        android:layout_height="match_parent"
        android:layout_gravity="start" />

</android.support.v4.widget.DrawerLayout>